--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -32,8 +32,8 @@
     --breakpoint-md: 768px;
     --breakpoint-lg: 992px;
     --breakpoint-xl: 1200px;
-    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Microsoft Yahei";
-    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Microsoft Yahei";
+    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
 }
 
 *,
@@ -43,7 +43,7 @@
 }
 
 html {
-    font-family: "Microsoft Yahei";
+    font-family: sans-serif;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
@@ -70,7 +70,7 @@ section {
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Microsoft Yahei";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -206,7 +206,7 @@ code,
 kbd,
 pre,
 samp {
-    font-family: "Microsoft Yahei";
+    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     font-size: 1em
 }
 
@@ -267,7 +267,7 @@ optgroup,
 select,
 textarea {
     margin: 0;
-    font-family: "Microsoft Yahei";
+    font-family: inherit;
     font-size: inherit;
     line-height: inherit
 }
@@ -388,7 +388,7 @@ h4,
 h5,
 h6 {
     margin-bottom: .5rem;
-    font-family: "Microsoft Yahei";
+    font-family: inherit;
     font-weight: 500;
     line-height: 1.2;
     color: inherit
@@ -511,7 +511,7 @@ mark {
 }
 
 .img-fluid {
-    max-width: 110%;
+    max-width: 108%;
     height: auto
 }
 
@@ -5755,7 +5755,7 @@ button.close {
     z-index: 1070;
     display: block;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Microsoft Yahei";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-style: normal;
     font-weight: 400;
     line-height: 1.5;
@@ -5880,7 +5880,7 @@ button.close {
     z-index: 1060;
     display: block;
     max-width: 276px;
-    font-family: -apple-system, BlinkMacSystemFont, "Microsoft Yahei";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-style: normal;
     font-weight: 400;
     line-height: 1.5;
@@ -9019,7 +9019,7 @@ button.bg-dark:hover {
 }
 
 .text-monospace {
-    font-family: "Microsoft Yahei";
+    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
 }
 
 .text-justify {
