--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -89,6 +89,53 @@ hr {
     overflow: visible
 }
 
+.progressS-bar {
+  border-radius: 20px;
+  height: 20px;
+  margin: 0px;
+  overflow: hidden;
+  position: relative;
+  transform: translateZ(0);
+  width: 90%;
+}
+
+.progressNODEJS-bar--normal { background-color: #ffc8d6; }
+.progressCSS-bar--normal { background-color: #ffa8be; }
+.progressHTML-bar--normal { background-color: #ffbdcc; }
+
+.progressNODEJS-bar__bar {
+  background-color: #ececec;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;   
+  transform: translateX(70%);
+  transition: all 1s ease-out;
+}
+
+.progressCSS-bar__bar {
+    background-color: #ececec;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;   
+    transform: translateX(15%);
+    transition: all 1s ease-out;
+}
+
+.progressHTML-bar__bar {
+    background-color: #ececec;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;   
+    transform: translateX(40%);
+    transition: all 1s ease-out;
+  }
+
 h1,
 h2,
 h3,
